--- a/TD 1 HTML/exo1.html
+++ b/TD 1 HTML/exo1.html
@@ -9,7 +9,10 @@
             <i> Bonjour </i> , il faut reconnaitre que le programmation HTML est facile.
         </h1>
         <h2>
-            <b> Toutefois </b> , il faut faire attention a tout pour obtenir le resultat voulu
+            <b> Toutefois </b> , il faut faire attention a tout pour obtenir le resultat voulu 
         </h2>
+        <h3>
+            <li> <a href="page index.html"> Retour a la pasge index </a> </li>
+        </h3>
     </body>
 </html>
