Création lien pour retourner a l'index

--- a/TD 1 HTML/exo1.html
+++ b/TD 1 HTML/exo1.html
@@ -12,7 +12,7 @@
             <b> Toutefois </b> , il faut faire attention a tout pour obtenir le resultat voulu 
         </h2>
         <h3>
-            <li> <a href="page index.html"> Retour a la pasge index </a> </li>
+            <li> <a href="page index.html"> Retour à la page index </a> </li>
         </h3>
     </body>
 </html>
