--- a/TD 1 HTML/exo2.html
+++ b/TD 1 HTML/exo2.html
@@ -28,5 +28,9 @@
             <p align="left" style="font-size:xx-small"> TITRE7 </p>
         </h3>
         <hr>
+        <h4>
+            <li> <a href="page index.html"> Retour à la page index </a> </li>
+            </a> </li>
+        </h4>
     </body>
 </html>
