--- a/TD 1 HTML/index.html
+++ b/TD 1 HTML/index.html
@@ -5,10 +5,10 @@
     <body>
         <h1>
              <ul>
-                <li> <a href=tableau1.html>
+                <li> <a href=exo1.html>
                     Lien vers exo1
                 </a> </li>
-                <li> <a href=tableau1.html>
+                <li> <a href=exo2.html>
                     Lien vers exo2
                 </a> </li>
                 <li> <a href=tableau1.html> 
