--- a/TD 1 HTML/tableau1.html
+++ b/TD 1 HTML/tableau1.html
@@ -42,5 +42,8 @@
                 <td>SISR3, SISR4, SISR5</td>
             </tr>
         </table>
+        <h1>
+            <li> <a href="index.html"> Retour à la page index </a> </li>
+        </h1>
     </tbody>
 </html>
