--- a/TD 1 HTML/CSS.html
+++ b/TD 1 HTML/CSS.html
@@ -5,6 +5,7 @@
     <body> 
         <div class="style1"> Bandeau </div>
         <div class="style2">Contenue</div>
-        <dic class="style3">Pied de page</div>
+        <div class="menu"> Menu </div>
+        <div class="style3">Pied de page</div>
     </body>
 </html>
