Ajout des menu haut/bas + blocks news

--- a/TD 1 HTML/CSS.html
+++ b/TD 1 HTML/CSS.html
@@ -4,8 +4,10 @@
     </head>
     <body> 
         <div class="style1"> Bandeau </div>
-        <div class="style2">Contenue</div>
-        <div class="menu"> Menu </div>
+        <div class="menuhaut"> Menu Haut</div>
+        <div class="style2"> <div style="text-align:center"> Contenue </div> </div>
+        <div class="menubas"> Manu Bas</div>
         <div class="style3">Pied de page</div>
+        <div class="blocknews"> block news</div>
     </body>
 </html>
