--- a/TD 1 HTML/CSS.html
+++ b/TD 1 HTML/CSS.html
@@ -4,10 +4,11 @@
     </head>
     <body> 
         <div class="style1"> Bandeau </div>
-        <div class="menuhaut"> Menu Haut</div>
-        <div class="style2"> <div style="text-align:center"> Contenue </div> </div>
-        <div class="menubas"> Manu Bas</div>
-        <div class="style3">Pied de page</div>
+        <div class="style2"> <div style="text-align:center"> Contenue </div> 
+            <div class="menuhaut"> Menu Haut</div>
+            <div class="menubas"> Manu Bas</div>
+        </div>
         <div class="blocknews"> block news</div>
+        <div class="style3">Pied de page</div>
     </body>
 </html>
