--- a/CV en anglais/CV_en_anglais.html
+++ b/CV en anglais/CV_en_anglais.html
@@ -1,40 +1,129 @@
 <html>
     <head>
             <title> english CV </title>
+            <link rel="stylesheet" href=CVEnAnglais.css>
     </head>
     <body>
         <h1>
-            <p style=font-size:x-large>VOLLET Maxence</p> 
-            <p style=font-size:x-large>779 route de Dieppe</p>
-            <p style=font-size:x-large> 76510, Meulers</p>
-            <p style=font-size:x-large>06 43 41 21 98</p>
-            <p style=font-size:x-large>maxence.vollet@outlook.fr </p>
+            <p> 
+                <div class=Texte> 
+                    VOLLET Maxence 
+                </div> 
+            </p> 
+            <p> 
+                <div class=Texte> 
+                    779 route de Dieppe 
+                </div> 
+            </p>
+            <p> 
+                <div class=Texte> 
+                    76510, Meulers 
+                </div> 
+            </p>
+            <p> 
+                <div class=Texte> 
+                    06 43 41 21 98 
+                </div> 
+            </p>
+            <p> 
+                <div class=Texte> 
+                    maxence.vollet@outlook.fr 
+                </div> 
+            </p>
         </h1>
-        <hr width="95%" size="6" color="#000000">
+        <hr width="94%" size="6" color="#000000">
         <h2>
-            <p style=font-size:xx-large> <b> <i> <u> Personal Profile : </u> </i> </b> </p>
-            <p> <u> Present :</u> <div> first year of BTEC Higher National Diploma of numerical system </div> </p>
+            <p> 
+                <div class=titre> 
+                    Personal Profile : 
+                </div> 
+            </p>
+            <p> 
+                <div class=titre2> 
+                    Present : 
+                </div> 
+                <div class=Texte> 
+                    first year of Two Year Technical Degree, numerical system 
+                </div> 
+            </p>
         </h2>
         <hr width="81%" size="2" color=#000000>
         <h3>
-            <p style=font-size:xx-large> <b> <i> <u>Education and Training : </u> </i> </b>
-            <p style=font-size:x-large> à remplir </p>
+            <p> 
+                <div class=Titre> 
+                    Education and Training : 
+                </div>
+            <p> 
+                <!--Information Education and Training-->
+                <!-- GERER TAILLE :--> 2020 : First year of <i> Two Year Technical Degree, numerical system</i> 
+            </p>
+            <p>
+                <div class=texte> 
+                    June 2020 : "obtention" of the Hight School Diploma of economics and social science stream. 
+                </div>
+            </p>
         </h3>
         <hr width="81%" size="2" color=#000000>
         <h4>
-            <p style=font-size:xx-large> <b> <i> <u> Work Experience : </u> </i> </b> </p>
-            <p style=font-size:x-large> à remplir </p>
+            <p> 
+                <div class=Titre> 
+                    Work Experience : 
+                </div>
+            <pe> 
+                <!--Information Work Experience-->
+                <div class=titre2> 
+                    Intership (2016) : 
+                </div> 
+                <div class=texte> 
+                    /// 
+                </div>
+            </p>
         </h4>
         <hr width="81%" size="2" color=#000000>
         <h5>
-            <p style=font-size:xx-large> <i> <b> <u> Interests and Hobbies : </u> </i> </b> </p>
-            <p style=font-size:x-large> à remplir </p>
+            <p> 
+                <div class=Titre> 
+                    Skills : 
+                </div>
+            <p> 
+                <!--Information Skills-->
+                <div class=texte>
+                    French : Native speaker 
+                </div>
+            </p>
+            <p>
+                <div class=texte> 
+                    English : Intermediate level 
+                </div>
+            </p>
         </h5>
         <hr width="81%" size="2" color=#000000>
         <h6>
-            <p style=font-size:xx-large> <b> <i> <u> References : </i> </b> </u> </p>
-            <p style=font-size:x-large> /// </p>
+            <p style=font-size:xx-large> 
+                <div class=Titre> 
+                    Interests and Hobbies : 
+                </div>
+            <p style=font-size:x-large> 
+                <!--Information Interests and Hobbies-->
+                <div class=texte>
+                    Play online games 
+                </div>
+             </p>
+        </h6>
+        <hr width="81%" size="2" color=#000000>
+        <h6>
+            <p> 
+                <div class=Titre> 
+                    References : 
+                </div>
+            <p> 
+                <!--Information Reference-->
+                <div class=texte> 
+                    /// 
+                </div>
+            </p>
         </h6>
         <hr width="95%" size="6" color=#000000>
     </body>
 </html>
+<!-- ! Vérifier avec W3C validator ! -->
