--- a/CV en anglais/CV_en_anglais.html
+++ b/CV en anglais/CV_en_anglais.html
@@ -5,106 +5,131 @@
     </head>
     <body>
         <h1>
+            <!-- Information of Personal Detail-->
             <p> 
-                <div class=Texte> 
+                <div class=infoperso> 
                     VOLLET Maxence 
                 </div> 
             </p> 
+            <p>
+                <div class=infoperso>
+                    19 years old
+                </div>
+            </p>
             <p> 
-                <div class=Texte> 
+                <div class=infoperso> 
                     779 route de Dieppe 
                 </div> 
             </p>
             <p> 
-                <div class=Texte> 
+                <div class=infoperso> 
                     76510, Meulers 
                 </div> 
             </p>
             <p> 
-                <div class=Texte> 
+                <div class=infoperso> 
                     06 43 41 21 98 
                 </div> 
             </p>
+            <p>
+                <div class=infoperso>
+                    In possession of the driving licence
+                </div>
+            </p>
             <p> 
-                <div class=Texte> 
+                <div class=infoperso> 
                     maxence.vollet@outlook.fr 
                 </div> 
             </p>
         </h1>
         <hr width="94%" size="6" color="#000000">
         <h2>
+            <!-- Information of Personal Profile-->
             <p> 
                 <div class=titre> 
                     Personal Profile : 
-                </div> 
-            </p>
-            <p> 
-                <div class=titre2> 
-                    Present : 
-                </div> 
-                <div class=Texte> 
-                    first year of Two Year Technical Degree, numerical system 
-                </div> 
+                </div>
+                <div class=texte>
+                    ///
+                </div>
             </p>
         </h2>
         <hr width="81%" size="2" color=#000000>
         <h3>
+            <!--Information of Education and Training-->
             <p> 
                 <div class=Titre> 
                     Education and Training : 
                 </div>
             <p> 
-                <!--Information Education and Training-->
-                <!-- GERER TAILLE :--> 2020 : First year of <i> Two Year Technical Degree, numerical system</i> 
+                <div class=titre2>
+                    Present :
+                </div>
+                <div class=texte>
+                    First year of <i> Two Year Technical Degree, numerical system </i> 
+                </div>
             </p>
             <p>
+                <div class=titre2>
+                    June 2020 : 
+                </div>
                 <div class=texte> 
-                    June 2020 : "obtention" of the Hight School Diploma of economics and social science stream. 
+                    Graduate of the A-Level of economics and social science stream from senior hight school Jehan Ango, Dieppe
                 </div>
             </p>
         </h3>
         <hr width="81%" size="2" color=#000000>
         <h4>
+            <!--Information of Work Experience-->
             <p> 
                 <div class=Titre> 
                     Work Experience : 
                 </div>
             <pe> 
-                <!--Information Work Experience-->
                 <div class=titre2> 
                     Intership (2016) : 
                 </div> 
                 <div class=texte> 
-                    /// 
+                    At Dieppe, at /"ESTRAN cité de la mer"\
+                </div>
+                <div class=texte>
+                    /"à completer"\
                 </div>
             </p>
         </h4>
         <hr width="81%" size="2" color=#000000>
         <h5>
+            <!--Information of Skills-->
             <p> 
                 <div class=Titre> 
                     Skills : 
                 </div>
             <p> 
-                <!--Information Skills-->
+                <!-- Language -->
+                <div class=titre2>
+                    French :
+                </div>
                 <div class=texte>
-                    French : Native speaker 
+                    Native speaker 
                 </div>
             </p>
             <p>
+                <div class=titre2>
+                    English :
+                </div>
                 <div class=texte> 
-                    English : Intermediate level 
+                    Intermediate level 
                 </div>
             </p>
         </h5>
         <hr width="81%" size="2" color=#000000>
         <h6>
+            <!--Information of Interests and Hobbies-->
             <p style=font-size:xx-large> 
                 <div class=Titre> 
                     Interests and Hobbies : 
                 </div>
             <p style=font-size:x-large> 
-                <!--Information Interests and Hobbies-->
                 <div class=texte>
                     Play online games 
                 </div>
@@ -112,18 +137,18 @@
         </h6>
         <hr width="81%" size="2" color=#000000>
         <h6>
+            <!--Information of Reference-->
             <p> 
                 <div class=Titre> 
                     References : 
                 </div>
             <p> 
-                <!--Information Reference-->
                 <div class=texte> 
                     /// 
                 </div>
             </p>
         </h6>
-        <hr width="95%" size="6" color=#000000>
+        <hr width="94%" size="6" color=#000000>
     </body>
 </html>
 <!-- ! Vérifier avec W3C validator ! -->
