--- a/CV en anglais/CV_en_anglais.html
+++ b/CV en anglais/CV_en_anglais.html
@@ -1,9 +1,12 @@
 <html>
     <head>
-            <title> english CV </title>
+            <title>
+                english CV 
+            </title>
             <link rel="stylesheet" href=CVEnAnglais.css>
     </head>
     <body>
+        <div class="marge"></div>
         <h1>
             <!-- Information of Personal Detail-->
             <p> 
@@ -47,10 +50,10 @@
             <!-- Information of Personal Profile-->
             <p> 
                 <div class=titre> 
-                    Personal Profile : 
+                    Personal Profile
                 </div>
                 <div class=texte>
-                    ///
+                    I'm a curious young man that want to understand what he is doing so I can be better in my job
                 </div>
             </p>
         </h2>
@@ -59,19 +62,19 @@
             <!--Information of Education and Training-->
             <p> 
                 <div class=Titre> 
-                    Education and Training : 
+                    Education and Training
                 </div>
-            <p> 
+            <p>
                 <div class=titre2>
-                    Present :
+                    Present
                 </div>
                 <div class=texte>
-                    First year of <i> Two Year Technical Degree, numerical system </i> 
+                    First year of Two Year Technical Degree, Numerical System from <i> La Providence </i> , at Amiens
                 </div>
             </p>
             <p>
                 <div class=titre2>
-                    June 2020 : 
+                    June 2020
                 </div>
                 <div class=texte> 
                     Graduate of the A-Level of economics and social science stream from senior hight school Jehan Ango, Dieppe
@@ -83,17 +86,13 @@
             <!--Information of Work Experience-->
             <p> 
                 <div class=Titre> 
-                    Work Experience : 
+                    Work Experience
                 </div>
-            <pe> 
                 <div class=titre2> 
-                    Intership (2016) : 
+                    Intership (2016)
                 </div> 
                 <div class=texte> 
-                    At Dieppe, at /"ESTRAN cité de la mer"\
-                </div>
-                <div class=texte>
-                    /"à completer"\
+                    At Dieppe, at the aquarium <i> "ESTRAN cité de la mer" </i> as an animal keeper
                 </div>
             </p>
         </h4>
@@ -102,12 +101,12 @@
             <!--Information of Skills-->
             <p> 
                 <div class=Titre> 
-                    Skills : 
+                    Skills
                 </div>
             <p> 
                 <!-- Language -->
                 <div class=titre2>
-                    French :
+                    French
                 </div>
                 <div class=texte>
                     Native speaker 
@@ -115,10 +114,10 @@
             </p>
             <p>
                 <div class=titre2>
-                    English :
+                    English
                 </div>
                 <div class=texte> 
-                    Intermediate level 
+                    Fluent speaker
                 </div>
             </p>
         </h5>
@@ -127,11 +126,11 @@
             <!--Information of Interests and Hobbies-->
             <p style=font-size:xx-large> 
                 <div class=Titre> 
-                    Interests and Hobbies : 
+                    Interests and Hobbies
                 </div>
             <p style=font-size:x-large> 
                 <div class=texte>
-                    Play online games 
+                    Play online video games
                 </div>
              </p>
         </h6>
@@ -140,15 +139,16 @@
             <!--Information of Reference-->
             <p> 
                 <div class=Titre> 
-                    References : 
+                    References
                 </div>
             <p> 
                 <div class=texte> 
-                    /// 
+                    /\/\
                 </div>
             </p>
         </h6>
         <hr width="94%" size="6" color=#000000>
+        </div>
     </body>
 </html>
 <!-- ! Vérifier avec W3C validator ! -->
