Fin mise en page + code

--- a/CV en anglais/CV_en_anglais.html
+++ b/CV en anglais/CV_en_anglais.html
@@ -1,69 +1,62 @@
-<html>
-    <head>
-            <title>
-                english CV 
-            </title>
-            <link rel="stylesheet" href=CVEnAnglais.css>
+<html lang="en">
+<meta charset="UTF-8">
+        <title> english CV </title>
+        <link rel="stylesheet" href="CVEnAnglais.css">    
     </head>
     <body>
-        <div class="marge"></div>
-        <h1>
-            <!-- Information of Personal Detail-->
-            <p> 
-                <div class=infoperso> 
-                    VOLLET Maxence 
-                </div> 
-            </p> 
-            <p>
-                <div class=infoperso>
-                    19 years old
-                </div>
-            </p>
-            <p> 
-                <div class=infoperso> 
-                    779 route de Dieppe 
-                </div> 
-            </p>
-            <p> 
-                <div class=infoperso> 
-                    76510, Meulers 
-                </div> 
-            </p>
-            <p> 
-                <div class=infoperso> 
-                    06 43 41 21 98 
-                </div> 
-            </p>
-            <p>
-                <div class=infoperso>
-                    In possession of the driving licence
-                </div>
-            </p>
-            <p> 
-                <div class=infoperso> 
-                    maxence.vollet@outlook.fr 
-                </div> 
-            </p>
-        </h1>
-        <hr width="94%" size="6" color="#000000">
-        <h2>
-            <!-- Information of Personal Profile-->
-            <p> 
-                <div class=titre> 
+        <!-- Information of Personal Detail-->
+        <p> 
+            <div class=infoperso> 
+                VOLLET Maxence 
+            </div> 
+        </p> 
+        <p>
+            <div class=infoperso>
+                19 years old
+            </div>
+        </p>
+        <p> 
+            <div class=infoperso> 
+                779 route de Dieppe 
+            </div> 
+        </p>
+        <p> 
+            <div class=infoperso> 
+                76510, Meulers 
+            </div> 
+        </p>
+        <p> 
+            <div class=infoperso> 
+                06 43 41 21 98 
+            </div> 
+        </p>
+        <p>
+            <div class=infoperso>
+                In possession of the driving licence
+            </div>
+        </p>
+        <p> 
+            <div class=infoperso> 
+                maxence.vollet@outlook.fr 
+            </div> 
+        </p>
+        <div class=bordure_partit>  </div>  <!--replace the tag <hr> -->
+        <!-- Information of Personal Profile-->
+        <p> 
+            <div class=titre> 
                     Personal Profile
                 </div>
                 <div class=texte>
                     I'm a curious young man that want to understand what he is doing so I can be better in my job
                 </div>
             </p>
-        </h2>
-        <hr width="81%" size="2" color=#000000>
-        <h3>
+            <div class=bordure_texte>  </div>  <!--replace the tag <hr> -->
             <!--Information of Education and Training-->
             <p> 
                 <div class=Titre> 
                     Education and Training
                 </div>
+            </p>
             <p>
                 <div class=titre2>
                     Present
@@ -80,9 +73,7 @@
                     Graduate of the A-Level of economics and social science stream from senior hight school Jehan Ango, Dieppe
                 </div>
             </p>
-        </h3>
-        <hr width="81%" size="2" color=#000000>
-        <h4>
+        <div class=bordure_texte>  </div>  <!--replace the tag <hr> -->
             <!--Information of Work Experience-->
             <p> 
                 <div class=Titre> 
@@ -95,15 +86,14 @@
                     At Dieppe, at the aquarium <i> "ESTRAN cité de la mer" </i> as an animal keeper
                 </div>
             </p>
-        </h4>
-        <hr width="81%" size="2" color=#000000>
-        <h5>
+        <div class=bordure_texte>   </div>  <!--replace the tag <hr> -->
             <!--Information of Skills-->
             <p> 
                 <div class=Titre> 
                     Skills
                 </div>
-            <p> 
+            </p>
+            <p>
                 <!-- Language -->
                 <div class=titre2>
                     French
@@ -120,35 +110,30 @@
                     Fluent speaker
                 </div>
             </p>
-        </h5>
-        <hr width="81%" size="2" color=#000000>
-        <h6>
+        <div class=bordure_texte>  </div>  <!--replace the tag <hr> -->
             <!--Information of Interests and Hobbies-->
-            <p style=font-size:xx-large> 
+            <p> 
                 <div class=Titre> 
                     Interests and Hobbies
                 </div>
-            <p style=font-size:x-large> 
+            </p> 
+            <p>
                 <div class=texte>
                     Play online video games
                 </div>
-             </p>
-        </h6>
-        <hr width="81%" size="2" color=#000000>
-        <h6>
+            </p>
+        <div class=bordure_texte>  </div>  <!--replace the tag <hr> -->
             <!--Information of Reference-->
             <p> 
                 <div class=Titre> 
                     References
                 </div>
+            </p>
             <p> 
                 <div class=texte> 
                     /\/\
                 </div>
             </p>
-        </h6>
-        <hr width="94%" size="6" color=#000000>
-        </div>
+        <div class=bordure_partit>  </div>  <!--replace the tag <hr> -->
     </body>
-</html>
-<!-- ! Vérifier avec W3C validator ! -->
+</html> 
