Remise en page+ajout d'une nouvell type de bordure

--- a/CV en anglais/CV_en_anglais.html
+++ b/CV en anglais/CV_en_anglais.html
@@ -32,12 +32,12 @@
         </p>
         <p>
             <div class=infoperso>
-                In possession of the driving licence
+                maxence.vollet@outlook.fr 
             </div>
         </p>
         <p> 
             <div class=infoperso> 
-                maxence.vollet@outlook.fr 
+                In possession of the driving licence
             </div> 
         </p>
         <div class=bordure_partit>  </div>  <!--replace the tag <hr> -->
@@ -47,7 +47,7 @@
                     Personal Profile
                 </div>
                 <div class=texte>
-                    I'm a curious young man that want to understand what he is doing so I can be better in my job
+                    I am a curious young man that want to understand what he is doing so I can do better at my job
                 </div>
             </p>
             <div class=bordure_texte>  </div>  <!--replace the tag <hr> -->
@@ -62,7 +62,7 @@
                     Present
                 </div>
                 <div class=texte>
-                    First year of Two Year Technical Degree, Numerical System from <i> La Providence </i> , at Amiens
+                    First year of Two Year Technical Degree, Numerical System from <i> La Providence</i>, Amiens
                 </div>
             </p>
             <p>
@@ -70,7 +70,7 @@
                     June 2020
                 </div>
                 <div class=texte> 
-                    Graduate of the A-Level of economics and social science stream from senior hight school Jehan Ango, Dieppe
+                    Graduate of the A-Level of economics and social science stream from senior hight school <i> Jehan Ango</i>, Dieppe
                 </div>
             </p>
         <div class=bordure_texte>  </div>  <!--replace the tag <hr> -->
@@ -93,13 +93,18 @@
                     Skills
                 </div>
             </p>
+            <!-- Language skill -->
             <p>
-                <!-- Language -->
+                <div class=titreSkill>
+                    Languages : 
+                </div>
+            </p>    
+            <p>
                 <div class=titre2>
                     French
                 </div>
                 <div class=texte>
-                    Native speaker 
+                    I am a native speaker 
                 </div>
             </p>
             <p>
@@ -107,7 +112,19 @@
                     English
                 </div>
                 <div class=texte> 
-                    Fluent speaker
+                    I am a fluent speaker
+                </div>
+            </p>
+            <div class=bordure_skill>  </div>  <!--replace the tag <hr> -->
+            <!-- Numerical skill-->
+            <p>
+                <div class=titreSkill>
+                    Numerical :
+                </div>
+            </p>
+            <p>
+                <div class=texte>
+                    I master the HTML, the CSS, the PHP and the C languages
                 </div>
             </p>
         <div class=bordure_texte>  </div>  <!--replace the tag <hr> -->
@@ -131,7 +148,7 @@
             </p>
             <p> 
                 <div class=texte> 
-                    /\/\
+                    \/\/\/
                 </div>
             </p>
         <div class=bordure_partit>  </div>  <!--replace the tag <hr> -->
