Lien vers liste des exo

--- a/TD 1 HTML/CSS.html
+++ b/TD 1 HTML/CSS.html
@@ -10,5 +10,10 @@
         </div>
         <div class="blocknews"> block news</div>
         <div class="style3">Pied de page</div>
+
+                <!--Boutton retour page-->
+                <a href="../page_liste_d'exo.html">
+                    Retour à la liste des exo
+                </a>
     </body>
 </html>
