--- a/TD 1 HTML/CSS1a.html
+++ b/TD 1 HTML/CSS1a.html
@@ -111,5 +111,10 @@
                     </tr>
                 </table>
         </h3>
+
+                <!--Boutton retour page-->
+                <a href="../page_liste_d'exo.html">
+                    Retour à la liste des exo
+                </a>
     </body>
 </html>
