--- a/TD 1 HTML/exo2.html
+++ b/TD 1 HTML/exo2.html
@@ -32,5 +32,10 @@
             <li> <a href="index.html"> Retour à la page index </a> </li>
             </a> </li>
         </h4>
+
+                <!--Boutton retour page-->
+                <a href="../page_liste_d'exo.html">
+                    Retour à la liste des exo
+                </a>
     </body>
 </html>
