--- a/TD 1 HTML/formulaire1.html
+++ b/TD 1 HTML/formulaire1.html
@@ -136,5 +136,10 @@
                 </p>
             </div>
         </form>
+
+
+        <!--Boutton retour page-->
+        <a href="../page_liste_d'exo.html">
+        </a>
     </body>
 </html> 
