--- a/TD 1 HTML/index.html
+++ b/TD 1 HTML/index.html
@@ -16,5 +16,10 @@
                 </a> </li>
             </ul>
         </h1>
+
+                <!--Boutton retour page-->
+                <a href="../page_liste_d'exo.html">
+                    Retour à la liste des exo
+                </a>
     </body>
 </html>
