--- a/TD 1 HTML/tableau1.html
+++ b/TD 1 HTML/tableau1.html
@@ -45,5 +45,10 @@
         <h1>
             <li> <a href="index.html"> Retour à la page index </a> </li>
         </h1>
+
+                <!--Boutton retour page-->
+                <a href="../page_liste_d'exo.html">
+                    Retour à la liste des exo
+                </a>
     </tbody>
 </html>
