--- a/TD 1 HTML/exo1.html
+++ b/TD 1 HTML/exo1.html
@@ -14,5 +14,10 @@
         <h3>
             <li> <a href="index.html"> Retour à la page index </a> </li>
         </h3>
+
+                <!--Boutton retour page-->
+                <a href="../page_liste_d'exo.html">
+                    Retour à la liste des exo
+                </a>
     </body>
 </html>
